  * softwarecenter/apt/aptcache.py,
    softwarecenter/view/availablepane.py:
    - defer opening the apt cache until we initialize the availablepane
      view, provides a nice startup time boost
  * test/test_appview.py,
    test/test_gui_buy_something.py,
    test/test_software_channels.py:
    - update test cases for deferred apt cache open

  [ Kiwinote ]
  * softwarecenter/app.py:
    - display pkgs in correct pane when passing arguments (LP: #689407)

 -- Gary Lasker <gary.lasker@canonical.com>  Mon, 24 Jan 2011 20:31:59 -0500

software-center (3.1.10) natty; urgency=low

  [ Michael Vogt ]
  * include full AUTHORS info into the about dialog,
    based on the lp:~adnane002/software-center/fix.632770
    branch (LP: #632770)
  * data/ui/SoftwareCenter.ui:
    - add translator_credits (LP: #632770), thanks to 
      Adnane Belmadiaf 
  * merged lp:~aaronp/software-center/fix-699898, many thanks
    to Aaron Peachey (LP: #699898)

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't crash on pressing backspace in the history pane (LP: #696639)
  * softwarecenter/backend/aptd.py:
    - play nicely after cancelling policykit dialog
  * softwarecenter/db/application.py:
    - display correct version number for installed packages (LP: #695026)
  * softwarecenter/distro/*.py:
    - fix broken translations (LP: #703610)

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/backend/aptd.py,
    softwarecenter/models/appstore.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/appdetailsview_webkit.py,
    softwarecenter/view/appview.py:
    - restore progress bar feedback when installing/removing software
      from within the applist view (LP: #701589)
    - clean up unused code
  * softwarecenter/backend/aptd.py:
    - attach the aptdaemon progress-changed listener earlier in the
      transaction to allow for more instant progress feedback in the UI
