@@ -21,6 +21,24 @@ class TestSCUtils(unittest.TestCase):
         self.assertEqual(release_filename_in_lists_from_deb_line(debline),
                          "security.ubuntu.com_ubuntu_dists_maverick-security_Release")
 
+    def test_get_http_proxy_from_libproxy(self):
+        # test url
+        url = "http://archive.ubuntu.com"
+        # ensure we look at environment first
+        os.environ["PX_CONFIG_ORDER"] = "config_envvar"
+        # normal proxy
+        os.environ["http_proxy"] = "http://localhost:3128/"
+        proxy = get_http_proxy_string_from_libproxy(url)
+        self.assertEqual(proxy, "http://localhost:3128/")
+        # direct
+        os.environ["http_proxy"] = ""
+        proxy = get_http_proxy_string_from_libproxy(url)
+        self.assertEqual(proxy, "")
+        # user/pass
+        os.environ["http_proxy"] = "http://user:pass@localhost:3128/"
+        proxy = get_http_proxy_string_from_libproxy(url)
+        self.assertEqual(proxy, "http://user:pass@localhost:3128/")
+
 if __name__ == "__main__":
     import logging
     logging.basicConfig(level=logging.DEBUG)
